--- a/ProjetPlatinium.html
+++ b/ProjetPlatinium.html
@@ -24,8 +24,8 @@
 </header>
 <section class="banniere" id="banniere">
     <div class="contenu">
-        <h2>Recrutement digital pour votre entreprise</h2>
-        <p>Nous aidons les Startups, TPE et PME a recruter plus facilement des profils digitaux, tech et IT et sans atteindre les coûts des cabinets de recrutement ou RPO</p>
+        <h2>Recrutement digital pour votre entreprise.</h2>
+        <p>Nous aidons les Startups, TPE et PME a recruter plus facilement des profils digitaux, tech et IT et sans atteindre les coûts des cabinets de recrutement ou RPO.</p>
         <a href="#" class="btn1"> Connexion</a>
         <a href="#" class="btn2">Essai gratuit</a>
     </div>
